# cursor_tooling

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONVENTIONS.md  OPENSPEC_FLOW.md  README.md
.cursor/: build-local-tools.sh  mcp.json  setup-worktree-unix.sh  worktrees.json
.cursor/agents/: critique-and-refine.md  critiquer.md  osf-apply-abort.md  osf-apply-finish.md  osf-apply-start.md  verifier.md  web-research.md  work-next.md
.cursor/skills/archive-tickets/: SKILL.md
.cursor/skills/cross-critique/: SKILL.md
.cursor/skills/file-tickets/: SKILL.md
.cursor/skills/giterloper/: HIERARCHICAL_TRUTH_AND_ALIGNMENT_MANDATE.md  SKILL.md
.cursor/skills/openspec-flow-install/: SKILL.md
.cursor/skills/osf-apply-changes/: SKILL.md
.cursor/skills/osf-explain/: SKILL.md
.cursor/skills/osf-propose/: SKILL.md
.cursor/skills/sleuths/: .gitignore  Cargo.toml  SKILL.md  pyproject.toml  secrets.example.env
.cursor/skills/sleuths/sleuth/: Cargo.toml  __init__.py  checkpoint.py  chunk.py  cli.py  config.py  context_budget.py  discover.py  graph.py  inference.py  jsonl_extract.py  pipeline.py  prompts.py  query.py  refresh.py  relevance.py  reset.py  slug.py  token.py  tracing.py
.cursor/skills/sleuths/sleuth/src/: checkpoint.rs  chunk.rs  config.rs  context_budget.rs  discover.rs  inference.rs  jsonl_extract.rs  main.rs  ollama.rs  pipeline.rs  prompts.rs  query.rs  refresh.rs  relevance.rs  reset.rs  slug.rs  token.rs  verbose.rs
.cursor/skills/sleuths/tests/: test_sleuth.py
scripts/: build-local-tools.sh  debug-sleuth-refresh-probe.sh
(+79 files in other folders)
