[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleuth"
version = "0.2.0"
description = "Incremental summarization of Cursor agent transcripts"
readme = "SKILL.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.28",
    "langsmith>=0.2.11",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.4"]

[project.scripts]
sleuth = "sleuth.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sleuth*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
