[package]
name = "sleuth"
version = "0.1.0"
edition = "2021"
description = "Incremental map/reduce summarization of Cursor agent transcripts"

[[bin]]
name = "sleuth"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
